[gd_scene load_steps=9 format=3 uid="uid://b8iwpiqrr2xiw"]

[ext_resource type="Script" path="res://fallingrock.gd" id="1_b8u4m"]
[ext_resource type="Texture2D" uid="uid://rrtbld81ux4g" path="res://assets/foreground/rock.png" id="2_amtq7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_inebp"]
atlas = ExtResource("2_amtq7")
region = Rect2(0, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_else4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inebp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nlrs"]
size = Vector2(32, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_707bk"]
size = Vector2(36, 29)

[sub_resource type="Animation" id="Animation_ayvn5"]
resource_name = "shake"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2.38419e-07, 0), Vector2(3, 0), Vector2(0, 0), Vector2(-3, 0), Vector2(-2.38419e-07, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_da4at"]
_data = {
"shake": SubResource("Animation_ayvn5")
}

[node name="fallingrock" type="CharacterBody2D"]
script = ExtResource("1_b8u4m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.296875, 0.414063, 0.523438, 1)
position = Vector2(5, -1)
scale = Vector2(1.70833, 1.5)
sprite_frames = SubResource("SpriteFrames_else4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_8nlrs")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_707bk")

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="hitground" type="RayCast2D" parent="."]
target_position = Vector2(0, 19)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_da4at")
}

[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
